# python_pptx_interface

./: LICENSE  README.md  README.rst  optional-requirements.txt  pyproject.toml  requirements.txt  setup.py
examples/: font_style_example_01.py
pptx_tools/: better_abc.py  creator.py  enumerations.py  example.py  fill_style.py  font.py  font_style.py  paragraph_style.py  position.py  style_sheets.py  table_style.py  templates.py  utils.py
pptx_tools/examples/: font_style_example_01.py  general_example_01.py  paragraph_style_example_01.py  table_style_example_01.py
pptx_tools/resources/: example-template.pptx
resources/: example-template.pptx
tests/: test_pptx_font_style.py  test_pptx_table_style.py  test_pptxcreator.py  test_pptxposition.py  test_utils.py
